created data services.small refactoring @ wallet_pool interfaces
