# pkg/types/types.go
@@ -25,5 +25,6 @@
 package types
 
 const (
-	WalletUUIDHeaderName = "wallet_uuid"
+	WalletUUIDHeaderName         = "wallet_uuid"
+	MnemonicWalletUUIDHeaderName = "mnemonic_wallet_uuid"
 )
